# ercr_control

./: CMakeLists.txt  README.md  package.xml
ercr_joystick_control/: CMakeLists.txt  README.MD  package.xml
ercr_joystick_control/launch/: thrust_control.launch
ercr_joystick_control/scripts/: thrust_control.py
launch/: joystick_thrust_conrol.launch  state_estimation.launch
scripts/joystick_control/: joystick_thrust_control.py
